# braincells

./: .envrc  .gitignore  .pre-commit-config.yaml  BTW.md  README.md  index.md  module-1.md  outline.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
.vitepress/: config.mts
components/: Quiz.vue
docs/: custom.css  index.md  module-4-dynamo.md  package.json
docs/.vitepress/: config.mts
docs/containers/: outline.md
docs/level-1/: account.md  cloud-computing.md  use-case.md
docs/level-2/: hello-world-lambda.md  your-first-api.md
docs/level-3/: frameworks.md  project.md
docs/level-4/: image-service.md
docs/level-5/: eda-serverless.md  statemachines.md  weather-report.md
docs/module-1/: account.md  anatomy-of-lambda.md  hello-world-lambda.md  prerequisites.md  your-first-api.md
docs/onboarding/: outline.md
docs/onboarding/level-1/: cloud-computing.md  common-services.md  prerequisites.md
docs/onboarding/level-2/: hello-world-lambda.md  your-first-api.md
docs/onboarding/level-3/: sst.md
docs/onboarding/level-4/: image-service.md  s3.md
docs/public/: custom.css
docs/serverless-challenges/: index.md  outline.md
docs/serverless-solutions/: outline.md
etc/: sso.md
examples/deno-lambda-tmp/: README.md  samconfig.toml  template.yaml
examples/hello-world-lambda/: README.md  package.json
examples/serverless-challenges/event-driven/claim-check/: Cargo.toml  README.md  samconfig.toml  template.yaml
examples/serverless-challenges/event-driven/claim-check/src/: consumer.rs  notification.rs
examples/serverless-challenges/event-driven/cross-account-events/: Cargo.toml  README.md  samconfig.toml  template-a.yaml  template-b.yaml
examples/serverless-challenges/event-driven/cross-account-events/src/: consumer.rs  emitter.rs
examples/serverless-challenges/event-driven/fan-out/: Cargo.toml  README.md  samconfig.toml  template.yaml
examples/serverless-challenges/event-driven/fan-out/src/: consumer.rs  emitter.rs
examples/serverless-solutions/data-persistance-and-storage/store-and-serve-large-media-files/: Cargo.toml  samconfig.toml  template.yaml
examples/serverless-solutions/data-persistance-and-storage/store-and-serve-large-media-files/src/: download_file.rs  get_presigned_url.rs
exercises/first-api/: package.json  tsconfig.json  vitest.config.ts
exercises/image-service-rust/: .prettierrc  README.md  package.json
exercises/image-service-rust/apps/core/src/internal/: Cargo.toml
exercises/weather-report/: package.json  vitest.config.ts
module-1/: account.md  hello-world-lambda.md  hello-world.md  prerequisites.md
serverless-aws/: index.md
serverless-aws/level-2/: your-first-api.md
serverless-aws/level-4/: image-service.md
serverless-challenges/: index.md
serverless-challenges/apis/: index.md  securing-api-gateway.md  securing-lambda-function-urls.md
serverless-challenges/data-persistance-and-storage/: data-persistance-patterns-with-dynamodb.md  index.md  serverless-etl.md  store-and-serve-large-media-files.md
serverless-challenges/event-driven/: claim-check.md  cross-account-events.md  fan-out.md  index.md  storage-first.md
serverless-challenges/orchestration-and-workflow/: circuit-breaker.md  index.md  queue-load-leveling.md  retry-and-backoff.md  scheduled-jobs.md
(+127 files in other folders)
