[package]
name = "cross-account-events"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
aws-sdk-eventbridge = "1.48.0"
aws_lambda_events = "0.15.1"
lambda_runtime = "0.13.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "consumer"
path = "src/consumer.rs"

[[bin]]
name = "emitter"
path = "src/emitter.rs"
